--- a/Practice/05_04/index.html
+++ b/Practice/05_04/index.html
@@ -13,7 +13,7 @@
       type="text/css"
       media="all"
     />
-    <script type="module" src="script.js"></script>
+    <script async src="script.js"></script>
   </head>
   <body>
     <header class="siteheader">
