--- a/Practice/05_08/index.html
+++ b/Practice/05_08/index.html
@@ -13,7 +13,8 @@
       type="text/css"
       media="all"
     />
-    <script type="module" src="script.js"></script>
+    <link rel="stylesheet" href="styles.css" type="text/css" media="all" />
+    <script async src="script.js"></script>
   </head>
   <body>
     <header class="siteheader">
