--- a/05_10/index.html
+++ b/05_10/index.html
@@ -14,6 +14,7 @@
       type="text/css"
       media="all"
     />
+    <link rel="stylesheet" href="styles.css" type="text/css" media="all" />
     <script type="module" src="Backpack.js"></script>
     <script type="module" src="script.js"></script>
   </head>
@@ -22,6 +23,7 @@
       <div class="site-title">BackpackPacker</div>
       <div class="site-description">All backpack packing, all the time.</div>
     </header>
+
     <main class="maincontent">
       <div class="page-header">
         <h2 class="page-header__heading">A pack for every purpose</h2>
